0-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test-pod
spec:
  containers:
  - name: my-container
    image: nginx
    resources:
      limits:
        memory: "128Mi"
        cpu: "500m"
    volumeMounts:
      - name: my-test-volume
        mountPath: /var/www/html
  volumes:
    - name: my-test-volume
      persistentVolumeClaim:
        claimName: test-persistent-volume-claim
