8-pod-emptydir.yaml
apiVersion: v1
kind: Pod
metadata:
  name: emptydir-pod  
  # labels:
  #   name: myapp
spec:
  containers:
  - name: my-container
    image: nginx
    # resources:
    #   limits:
    #     memory: "128Mi"
    #     cpu: "500m"
    # ports:
    #   - containerPort: <Port>
    volumeMounts: 
      - name: my-volume
        mountPath: /var/www/html
  volumes:
    - name: my-volume
      emptyDir: {}
