nginx-deployment.yaml
# Create 1 pod with nginx:alpine image and 1 pod with httpd image and assign same labels to them
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginxfa
  labels:
    app: nginx000
    lab: nginxhttpd
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx000
      lab: nginxhttpd
  template:
    metadata: 
      labels: 
       app: nginx000
       lab: nginxhttpd
    spec:
      containers:
      - name: nginx-container
        image: nginx
        ports:
        - containerPort: 80
