lab-nginx-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lab-nginx-deployment
  labels:
    app: lab
spec:
  replicas: 2
  selector:
    matchLabels:
      app: lab
  template:
    metadata:
      labels:
        app: lab
    spec:
      containers:
      - name: nginx-container
        image: nginx
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: lab-nginx-service
spec:
  selector:
    app: lab
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 80
---
# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: nginx-test-ingress
#   annotations:
#     nginx.ingress.kubernetes.io/rewrite-target: /$2
#   labels:
#     app: lab
# spec:
#   rules:
#   # - host: myapp.com
#     - http:
#         paths:
#         - pathType: Prefix
#           path: /myapp
#           backend:
#             service:
#               name: lab-nginx-service
#               port: 
#                 number: 8080
# ---
