nginxhttpd-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginxhttpd-service
spec:
  selector:
    lab: nginxhttpd
  type: NodePort
  ports: 
  - protocol: TCP
    port: 80       
    targetPort: 80 
    nodePort: 30007
