nginx-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-test-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
  labels:
    app: lab
spec:
  rules:
    - host: huychacagdg.com
      http:
        paths:
        - pathType: Prefix
          path: /myapp
          backend:
            service:
              name: lab-nginx-service
              port: 
                number: 8080



# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: example-ingress
#   annotations:
#     nginx.ingress.kubernetes.io/rewrite-target: /$2
# spec:
#   rules:
#   - http:
#       paths:
#       - pathType: Prefix
#         path: /foo(/|$)(.*)
#         backend:
#           service:
#             name: foo-service
#             port:
#               number: 8080
#       - pathType: Prefix
#         path: /bar(/|$)(.*)
#         backend:
#           service:
#             name: bar-service
#             port:
#               number: 8080
